Add Google Colab demo

--- a/GLIP_demo.ipynb
+++ b/GLIP_demo.ipynb
@@ -6,6 +6,8 @@
         "id": "G9fueCPLFKin"
       },
       "source": [
+        "Deprecated<br>\n",
+        "<br>\n",
         "GitHub<br>\n",
         "https://github.com/microsoft/GLIP<br>\n",
         "論文<br>\n",
@@ -26,6 +28,115 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "fjsKertXalHM"
+      },
+      "source": [
+        "## downgrade python version"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ggFZ2lxpaoR9",
+        "outputId": "24272f7d-3bd4-4498-e1ad-d94ea4669a47"
+      },
+      "outputs": [],
+      "source": [
+        "!python --version"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WVt1-GvpapfJ",
+        "outputId": "ae93518b-99d9-4ba9-d29c-2f6a83f1f944"
+      },
+      "outputs": [],
+      "source": [
+        "# intall miniconda\n",
+        "!wget -c https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
+        "!chmod +x Miniconda3-latest-Linux-x86_64.sh\n",
+        "!bash ./Miniconda3-latest-Linux-x86_64.sh -b -f -p /usr/local\n",
+        "\n",
+        "# update conda\n",
+        "!conda init bash\n",
+        "!conda update -n base -c defaults conda -y"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jWekNOsEa4R1",
+        "outputId": "ea440f1b-85d4-4576-f544-230c60a98d0f"
+      },
+      "outputs": [],
+      "source": [
+        "# install python3.8 with conda\n",
+        "!conda install python=3.8 -y"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ib4bfIoCa_IK",
+        "outputId": "e3058428-8b47-4675-8f77-ead9518dbe08"
+      },
+      "outputs": [],
+      "source": [
+        "!python --version"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9NjuSOSFCk8j"
+      },
+      "source": [
+        "## change sys.path"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VJxR8PZQbqpt",
+        "outputId": "e6e664ce-98ba-45b1-b3e2-1cc6c6479332"
+      },
+      "outputs": [],
+      "source": [
+        "import sys\n",
+        "import pprint\n",
+        "\n",
+        "pprint.pprint(sys.path)\n",
+        "\n",
+        "# add import path\n",
+        "sys.path.append('/usr/local/lib/python3.8/site-packages')\n",
+        "\n",
+        "pprint.pprint(sys.path)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "TmL3LoMMGcNF"
       },
       "source": [
@@ -40,13 +151,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tthUF7D6FKiu",
-        "outputId": "8008a285-9578-46f1-c94c-fb1430b594d8"
+        "outputId": "d0c492b7-e872-4e85-83ef-4740eda9f591"
       },
       "outputs": [],
       "source": [
         "%cd /content\n",
         "\n",
-        "!git clone https://github.com/microsoft/GLIP.git"
+        "!git clone https://github.com/microsoft/GLIP.git\n",
+        "\n",
+        "# Commits on Jun 27, 2023\n",
+        "%cd /content/GLIP\n",
+        "!git checkout a5f302bfd4c5c67010e29f779e3b0bde94e89985"
       ]
     },
     {
@@ -59,22 +174,161 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NlwUaArS2RhU"
+      },
+      "source": [
+        "## downgrade cuda and gcc/g++"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "A-Tvkuzx1j5U",
+        "outputId": "7f49460f-c704-46df-acb4-3e187d01dd6d"
+      },
+      "outputs": [],
+      "source": [
+        "!nvcc --version\n",
+        "!gcc -v"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gzhjun-J2CzX",
+        "outputId": "c8d7da10-b386-4f49-cc67-d740318591ae"
+      },
+      "outputs": [],
+      "source": [
+        "# downgrade cuda\n",
+        "!apt-get update -y\n",
+        "!apt-get --purge remove \"*cublas*\" \"cuda*\" \"nsight*\"\n",
+        "!nvcc --version\n",
+        "\n",
+        "!wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/cuda-ubuntu1804.pin\n",
+        "!mv cuda-ubuntu1804.pin /etc/apt/preferences.d/cuda-repository-pin-600\n",
+        "!wget https://developer.download.nvidia.com/compute/cuda/10.2/Prod/local_installers/cuda-repo-ubuntu1804-10-2-local-10.2.89-440.33.01_1.0-1_amd64.deb\n",
+        "!dpkg -i cuda-repo-ubuntu1804-10-2-local-10.2.89-440.33.01_1.0-1_amd64.deb\n",
+        "!apt-key add /var/cuda-repo-10-2-local-10.2.89-440.33.01/7fa2af80.pub\n",
+        "!apt-get update\n",
+        "!apt-get -y install cuda=10.2.89-1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vJWEl5FJIdlA",
+        "outputId": "5cb2d947-4c55-4cbf-9646-4f13c7019280"
+      },
+      "outputs": [],
+      "source": [
+        "# downgrade g++, gcc\n",
+        "!wget -c http://archive.ubuntu.com/ubuntu/pool/universe/g/gcc-5/gcc-5-base_5.5.0-12ubuntu1_amd64.deb\n",
+        "!wget -c http://archive.ubuntu.com/ubuntu/pool/universe/i/isl-0.18/libisl15_0.18-4_amd64.deb\n",
+        "!wget -c http://archive.ubuntu.com/ubuntu/pool/universe/g/gcc-5/cpp-5_5.5.0-12ubuntu1_amd64.deb\n",
+        "!wget -c http://archive.ubuntu.com/ubuntu/pool/universe/g/gcc-5/libasan2_5.5.0-12ubuntu1_amd64.deb\n",
+        "!wget -c http://archive.ubuntu.com/ubuntu/pool/universe/g/gcc-5/libmpx0_5.5.0-12ubuntu1_amd64.deb\n",
+        "!wget -c http://archive.ubuntu.com/ubuntu/pool/universe/g/gcc-5/libgcc-5-dev_5.5.0-12ubuntu1_amd64.deb\n",
+        "!wget -c http://archive.ubuntu.com/ubuntu/pool/universe/g/gcc-5/gcc-5_5.5.0-12ubuntu1_amd64.deb\n",
+        "!wget -c http://archive.ubuntu.com/ubuntu/pool/universe/g/gcc-5/libstdc++-5-dev_5.5.0-12ubuntu1_amd64.deb\n",
+        "!wget -c http://archive.ubuntu.com/ubuntu/pool/universe/g/gcc-5/g++-5_5.5.0-12ubuntu1_amd64.deb\n",
+        "\n",
+        "!sudo apt install \\\n",
+        "  ./g++-5_5.5.0-12ubuntu1_amd64.deb \\\n",
+        "  ./gcc-5_5.5.0-12ubuntu1_amd64.deb \\\n",
+        "  ./gcc-5-base_5.5.0-12ubuntu1_amd64.deb \\\n",
+        "  ./cpp-5_5.5.0-12ubuntu1_amd64.deb \\\n",
+        "  ./libisl15_0.18-4_amd64.deb \\\n",
+        "  ./libgcc-5-dev_5.5.0-12ubuntu1_amd64.deb \\\n",
+        "  ./libasan2_5.5.0-12ubuntu1_amd64.deb \\\n",
+        "  ./libmpx0_5.5.0-12ubuntu1_amd64.deb \\\n",
+        "  ./libstdc++-5-dev_5.5.0-12ubuntu1_amd64.deb"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "y4BJHEU9KeyC"
+      },
+      "outputs": [],
+      "source": [
+        "!ln -s /usr/bin/gcc-5 /usr/local/cuda/bin/gcc;\n",
+        "!ln -s /usr/bin/g++-5 /usr/local/cuda/bin/g++;"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ckh58g-m7Ftj",
+        "outputId": "8aeb061b-1cbc-4f3e-c4d6-44479c73977b"
+      },
+      "outputs": [],
+      "source": [
+        "!nvcc --version\n",
+        "!gcc -v"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qyDprTlv2VGp"
+      },
+      "source": [
+        "## install libs"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
         "id": "AP8SsHYvHfkR",
-        "outputId": "46147e2f-927d-4886-af71-3c7467577a2a"
+        "outputId": "fb686e4c-0024-4eb5-e02f-9580f20974c8"
       },
       "outputs": [],
       "source": [
         "%cd /content/GLIP\n",
         "\n",
         "!pip install torch==1.9.0+cu102 torchvision==0.10.0+cu102 torchaudio==0.9.0 -f https://download.pytorch.org/whl/torch_stable.html\n",
-        "!pip install einops shapely timm yacs tensorboardX ftfy prettytable pymongo\n",
-        "!pip install transformers\n",
+        "!pip install einops shapely timm yacs tensorboardX ftfy prettytable pymongo opencv-python chardet\n",
+        "!pip install transformers==4.18.0"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "47q0BurDCrWX",
+        "outputId": "8fe1c105-d332-496f-c8d3-57d996b23ee3"
+      },
+      "outputs": [],
+      "source": [
+        "%cd /content/GLIP\n",
         "\n",
         "!python setup.py build develop --user"
       ]
@@ -96,7 +350,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yayN7u44HwTZ",
-        "outputId": "5747e06e-cc83-4f69-d21f-198440a83847"
+        "outputId": "7fe904ea-7980-4e2b-fcc0-5c42a00166b3"
       },
       "outputs": [],
       "source": [
@@ -111,6 +365,25 @@
         "import numpy as np\n",
         "pylab.rcParams['figure.figsize'] = 20, 12\n",
         "from maskrcnn_benchmark.config import cfg\n",
+        "# from maskrcnn_benchmark.engine.predictor_glip import GLIPDemo"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 507
+        },
+        "id": "BKlnYvSO_ySL",
+        "outputId": "ce3357e3-54c8-4827-b359-ac8c778af9db"
+      },
+      "outputs": [],
+      "source": [
+        "!sed -i ./maskrcnn_benchmark/engine/predictor_glip.py -e \"s/from transformers import AutoTokenizer/# from transformers import AutoTokenizer/g\"\n",
+        "\n",
+        "cfg.MODEL.LANGUAGE_BACKBONE.TOKENIZER_TYPE = 'clip'\n",
         "from maskrcnn_benchmark.engine.predictor_glip import GLIPDemo"
       ]
     },
@@ -127,19 +400,18 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "W_Bu70txxjNW",
-        "outputId": "5308aa32-cc73-4023-93f4-9b5ae421b5b5"
+        "id": "W_Bu70txxjNW"
       },
       "outputs": [],
       "source": [
         "%cd /content/GLIP\n",
         "!mkdir MODEL\n",
         "\n",
-        "!wget -c https://penzhanwu2bbs.blob.core.windows.net/data/GLIPv1_Open/models/glip_tiny_model_o365_goldg_cc_sbu.pth \\\n",
-        "      -O MODEL/glip_tiny_model_o365_goldg_cc_sbu.pth\n"
+        "# !wget -c https://penzhanwu2bbs.blob.core.windows.net/data/GLIPv1_Open/models/glip_tiny_model_o365_goldg_cc_sbu.pth \\\n",
+        "#       -O MODEL/glip_tiny_model_o365_goldg_cc_sbu.pth\n",
+        "\n",
+        "!wget -c https://huggingface.co/harold/GLIP/blob/main/glip_tiny_model_o365_goldg_cc_sbu_lvisbest.pth \\\n",
+        "      -O MODEL/glip_tiny_model_o365_goldg_cc_sbu.pth"
       ]
     },
     {
@@ -189,11 +461,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "koDQzF6Myb2c",
-        "outputId": "96495792-53e6-4da3-846f-e3c43d64772d"
+        "id": "koDQzF6Myb2c"
       },
       "outputs": [],
       "source": [
@@ -261,12 +529,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 846
-        },
-        "id": "jIfWMoQ7yr1s",
-        "outputId": "e872e39a-159e-453b-89fb-23f789a97b9d"
+        "id": "jIfWMoQ7yr1s"
       },
       "outputs": [],
       "source": [
@@ -279,8 +542,6 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "collapsed_sections": [],
-      "name": "GLIP_demo.ipynb",
       "provenance": []
     },
     "kernelspec": {
