Add Google Colab demo

--- a/[Deprecated]GLIP_demo.ipynb
+++ b/[Deprecated]GLIP_demo.ipynb
@@ -13,7 +13,7 @@
         "論文<br>\n",
         "https://arxiv.org/abs/2206.05836<br>\n",
         "<br>\n",
-        "<a href=\"https://colab.research.google.com/github/kaz12tech/ai_demos/blob/master/GLIP_demo.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/kaz12tech/ai_demos/blob/main/%5BDeprecated%5DGLIP_demo.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
