Add Google Colab demo

--- a/AnimateDiff_demo.ipynb
+++ b/AnimateDiff_demo.ipynb
@@ -108,52 +108,57 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "T2I_TYPE = \"1-ToonYou\" #@param [\"1-ToonYou\", \"2-Lyriel\", \"3-RcnzCartoon\", \"4-MajicMix\", \"5-RealisticVision\", \"6-Tusun\", \"7-FilmVelvia\", \"8-GhibliBackground\"]\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "tTJpNPCjEuJ8"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "T2I_TYPE = \"1-ToonYou\" #@param [\"1-ToonYou\", \"2-Lyriel\", \"3-RcnzCartoon\", \"4-MajicMix\", \"5-RealisticVision\", \"6-Tusun\", \"7-FilmVelvia\", \"8-GhibliBackground\"]\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!bash download_bashscripts/{T2I_TYPE}.sh"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "ivlskB8sEVCl"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!bash download_bashscripts/{T2I_TYPE}.sh"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Create Animation"
-      ],
       "metadata": {
         "id": "VKlqBAqJFibk"
-      }
+      },
+      "source": [
+        "# Create Animation"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "eeBgjGE4IpgI"
+      },
+      "outputs": [],
       "source": [
         "%cd /content/AnimateDiff\n",
         "\n",
         "# fix codes\n",
         "!sed -i ./animatediff/utils/convert_from_ckpt.py \\\n",
         "     -e \"s/load_state_dict(text_model_dict)/load_state_dict(text_model_dict, strict=False)/g\""
-      ],
-      "metadata": {
-        "id": "eeBgjGE4IpgI"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_ofqffiUrUSO"
+      },
+      "outputs": [],
       "source": [
         "%cd /content/AnimateDiff\n",
         "\n",
@@ -184,15 +189,15 @@
         "from safetensors import safe_open\n",
         "import math\n",
         "from pathlib import Path"
-      ],
-      "metadata": {
-        "id": "_ofqffiUrUSO"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "tu8nQTTLFkPj"
+      },
+      "outputs": [],
       "source": [
         "%cd /content/AnimateDiff\n",
         "\n",
@@ -204,7 +209,7 @@
         "args.L = 16\n",
         "args.W = 512\n",
         "args.H = 512\n",
-        "args.prompt = 'best quality, masterpiece, 1girl, looking at viewer, blurry background, upper body, contemporary, dress'\n",
+        "args.prompt = 'cherry blossoms, woman, 4k, definition, colorful'\n",
         "args.n_prompt = ''\n",
         "args.random_seed = 12\n",
         "\n",
@@ -218,15 +223,15 @@
         "\n",
         "config  = OmegaConf.load(args.config)\n",
         "samples = []"
-      ],
-      "metadata": {
-        "id": "tu8nQTTLFkPj"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Rj5W-bXAaa6I"
+      },
+      "outputs": [],
       "source": [
         "sample_idx = 0\n",
         "for model_idx, (config_key, model_config) in enumerate(list(config.items())[:1]):\n",
@@ -266,6 +271,8 @@
         "\n",
         "      elif model_config.path.endswith(\".safetensors\"):\n",
         "        state_dict = {}\n",
+        "        if T2I_TYPE == \"5-RealisticVision\":\n",
+        "          model_config.path = './models/DreamBooth_LoRA/realisticVisionV40_v20Novae.safetensors'\n",
         "        with safe_open(model_config.path, framework=\"pt\", device=\"cpu\") as f:\n",
         "          for key in f.keys():\n",
         "            state_dict[key] = f.get_tensor(key)\n",
@@ -321,25 +328,20 @@
         "    prompt = \"-\".join((prompt.replace(\"/\", \"\").split(\" \")[:10]))\n",
         "    save_videos_grid(sample, f\"{savedir}/sample/{sample_idx}-{prompt}.gif\")\n",
         "    print(f\"save to {savedir}/sample/{prompt}.gif\")"
-      ],
-      "metadata": {
-        "id": "Rj5W-bXAaa6I"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "aDtUQ8VXRp0f"
+      },
+      "outputs": [],
       "source": [
         "from IPython.display import Image\n",
         "\n",
         "Image(open(f\"{savedir}/sample/{sample_idx}-{prompt}.gif\", 'rb').read())"
-      ],
-      "metadata": {
-        "id": "aDtUQ8VXRp0f"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
