Add Google Colab demo

--- a/FastComposer_demo.ipynb
+++ b/FastComposer_demo.ipynb
@@ -135,7 +135,7 @@
         "!wget -c https://cdn.shopify.com/s/files/1/0250/3976/5585/files/gandhi_1024x1024.jpg \\\n",
         "      -O {filename_a}\n",
         "\n",
-        "!wget -c https://cdn-ak.f.st-hatena.com/images/fotolife/m/myworldhistoryblog/20191107/20191107221931.jpg \\\n",
+        "!wget -c https://providence-blue.com/wp-content/uploads/2018/08/florence-nightingale-facts-featured.jpg \\\n",
         "      -O {filename_b}"
       ]
     },
