Add Google Colab demo

--- a/AnimateDiff_demo.ipynb
+++ b/AnimateDiff_demo.ipynb
@@ -149,7 +149,11 @@
         "\n",
         "# fix codes\n",
         "!sed -i ./animatediff/utils/convert_from_ckpt.py \\\n",
-        "     -e \"s/load_state_dict(text_model_dict)/load_state_dict(text_model_dict, strict=False)/g\""
+        "     -e \"s/load_state_dict(text_model_dict)/load_state_dict(text_model_dict, strict=False)/g\"\n",
+        "\n",
+        "\n",
+        "!sed -i ./animatediff/utils/util.py \\\n",
+        "     -e \"s/fps=fps/duration=1000\\/fps/g\""
       ]
     },
     {
