Add Google Colab demo

--- a/MusicGen_demo.ipynb
+++ b/MusicGen_demo.ipynb
@@ -141,64 +141,64 @@
       "source": [
         "duration = 10\n",
         "\n",
-        "model.set_generation_params(duration=8)"
+        "model.set_generation_params(duration=duration)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## text prompts"
-      ],
       "metadata": {
         "id": "mcoRtwgiZo3V"
-      }
+      },
+      "source": [
+        "## text prompts"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "LW3b2rS5ZqjN"
+      },
+      "outputs": [],
       "source": [
         "prompts = [\n",
         "    \"Solid sound that makes you feel Japanese tradition\",\n",
         "    \"crazy piano jazz\"\n",
         "]"
-      ],
-      "metadata": {
-        "id": "LW3b2rS5ZqjN"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## text to music"
-      ],
       "metadata": {
         "id": "uPtPhLqbaAbT"
-      }
+      },
+      "source": [
+        "## text to music"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "sY1BVgWsaB9q"
+      },
+      "outputs": [],
       "source": [
         "res = model.generate(\n",
         "    prompts,\n",
         "    progress=True)"
-      ],
-      "metadata": {
-        "id": "sY1BVgWsaB9q"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "display_audio(res, 32000)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "9yBkHsCbaGLy"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "display_audio(res, 32000)"
+      ]
     }
   ],
   "metadata": {
